[package]
name = "totp-gateway"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance TOTP-based authentication gateway built on Cloudflare's Pingora framework for securing private network access"
documentation = "https://docs.rs/totp-gateway"
homepage = "https://github.com/your-username/totp-gateway"
repository = "https://github.com/your-username/totp-gateway"
license = "MIT"
readme = "README.md"
keywords = ["totp", "gateway", "pingora", "authentication", "proxy"]
categories = ["network-programming", "authentication", "web-programming", "command-line-utilities"]
exclude = [
    "target/*",
    ".github/*",
    "tests/*",
    "*.log",
    "config.toml",
]
rust-version = "1.85"

[dependencies]
pingora = { version = "0.6.0", features = ["lb"] }
async-trait = "0.1"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
totp-rs = { version = "5.6", features = ["gen_secret"] }
log = "0.4"
env_logger = "0.11"
bytes = "1.11.0"
tokio = { version = "1.48.0", features = ["full"] }
moka = { version = "0.12.11", features = ["sync"] }
ipnet = "2.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
clap = { version = "4.5", features = ["derive"] }
notify = "8.2.0"
arc-swap = "1.7"
regex = "1.12.2"
url = "2.5.7"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }

[[bin]]
name = "totp-gateway"
path = "src/main.rs"
